@@ -242,4 +242,6 @@ Jean-Charles.Lambert@oamp.fr
 18-Mar-04	 V1.21: bugs fixed, softening added       JCL
 03-Mar-05	 V1.30: memory bugs fixed, keybits added  JCL
 	                valgrind mem/leak safe            
+24-Apr-06	 V1.31: memory leak fixed                 JCL
+
 .fi
